# poor_locker

./: .gitignore  Cargo.toml  README.md
src/: data.rs  error.rs  lib.rs  locker.rs
src/client/: mod.rs
src/client/dynamo_client/: lock_store.rs  locker.rs  mod.rs
terraform/.mods/: dynamo_db.tf
terraform/test/: main.tf
