[package]
name = "poor_locker"
version = "0.1.0"
authors = ["mmmpa <mmmpa.mmmpa@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
wrapped_string_type_macro = { git = "https://github.com/mmmpa/wrapped_string_type_macro.git" }

async-trait = "0.1.31"
tokio = { version = "0.2", features = ["sync", "macros", "time", "fs"] }
futures = "0.3.5"

serde = { version = "^1.0.105", features = ["derive", "rc"] }
serde_json = "1.0"

rusoto_core = "0.44.0"
rusoto_dynamodb = "0.44.0"
rusoto_credential = "0.44.0"

[dev-dependencies]
rs_ttb = { git = "https://github.com/mmmpa/rs_test_tool_box.git" }
